src/index.css
/* font: questrial  */
@import url('https://fonts.googleapis.com/css2?family=Questrial&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

/* :root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
} */

*{
  box-sizing: border-box;
  font-family: "Questrial", sans-serif;
  margin: 0; 
  /* color: white;  */
  /* font-style: normal; */
  /* font-weight: 400; */
}

.card{
  width: 400px; 
  height: 500px; 

  /* background-color: grey; */
  background-color: #D0D0D0 ;
  display: flex; 
  flex-direction: column;
  justify-content: flex-end;
}

.background{
  text-align: center;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover; 

  flex: 1; 
  
  display: flex; 
  flex-direction: column;
  justify-content: flex-end;
}
/* CONDITIONAL REPLACEMENT FOR BACKGROUND */

.import-screen{
  text-align: center;
  flex: 1; 
  
  display: flex; 
  flex-direction: column;
  justify-content: center;
  gap: 8px;
}

.import-screen p{
  margin: 0; 
}



.background p.lyrics{
  background-color: white; 

  padding: 0 12px;
  max-width: 90%;
  text-align: left;
  border: 10px solid white ;
}

/* delete */
.card .song-info{
  color: white; 
}

/* .song-info{
} */

.card-footer{
  height: 10%;
  /* margin-top: auto; */
  background-color: black;
  border-top: 2px solid white;
  
  
  
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0 12px;
}

.logo.lyriq{
  color: white ; 
  height: 60% ;
}

form fieldset{
  width: 95vw; 
  /* height: 500px;  */
  
  margin-top: 40px;

  display: flex; 
  flex-direction: column;
  gap: 20px;
  
}

form fieldset label{
  display: flex;
  gap: 20px;

  align-items: center;
}

form label input,textarea{
  flex: 1; 
  border: 0;
  border-bottom: .8px solid #d0d0d0;
}

form label input,textarea:focus{
  /* border: .8px solid #d0d0d0; */
  outline: none;
  border: .2px solid  #d0d0d0; 
  border-bottom: 0;
}

form label input[type="file"]{
  border: none; 
  color: transparent;
}

form label input[type="file"]::file-selector-button {
  padding: 8px 16px;
  border: none;
  background: #d0d0d0;
  color: rgb(80, 80, 80);
  border-radius: 6px;
  cursor: pointer;
}

form label input[type="file"]::file-selector-button:active{
  color: #d0d0d0;
  background-color: rgb(80, 80, 80);
}

.logo.import{
  color: black;
  height: 25px;
}

/* button */
button{
  padding: 8px 16px;
  border: none;
  background: #d0d0d0;
  color: black;
  border: .7px  solid #898989;
  border-radius: 6px;
  cursor: pointer;
}

button.download{
  display: block;
  margin-left: auto ; 
}

/* Navbar.jsx */
.navbar{
  width: 100vw; 
  height: 52px; 
  background-color: #d0d0d0;
  
  display:  flex; 
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0 14px; 
}

.navbar span.lyriq{
  font-size: 20px; 
}

.navbar span.sign-up{
  font-size: 14px; 
}

.navbar span.sign-up:hover{
  text-decoration: underline;
}

